src/objects/Rfp_Requirements__c.object
<CustomObject>
    <description>R5 - Rfp Requirements</description>
    <fields>
        <fullName>Engineering_Specification_Provided__c</fullName>
        <description>R5 - Created as part of req 2461</description>
        <label>Engineering Specification Provided ?</label>
        <picklist>
            <picklistValues>
                <fullName>YES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NO</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Oppo__c</fullName>
        <formula>Rfp_Requirements__r.Rfp_Opportunity__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rfp_Addressed__c</fullName>
        <description>Created as part of  R5 Req 2461</description>
        <label>To Whom Should it be addressed ?</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Rfp_Detail__c</fullName>
        <description>R5 - Created as part of Req 2461</description>
        <label>Details</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Rfp_Details__c</fullName>
        <description>RFP Details - Created as part of R5 Req 2461</description>
        <label>Details</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Rfp_Documentation__c</fullName>
        <description>Documentation - Created as part of R5 Req 2461</description>
        <label>Documentation</label>
        <picklist>
            <picklistValues>
                <fullName>All available write-ups</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Datasheets only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Documentation</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Rfp_Factory_Discount_Request_Initiated__c</fullName>
        <description>R5 - Created as part of req 2461</description>
        <label>Factory Discount Request Initiated ?</label>
        <picklist>
            <picklistValues>
                <fullName>YES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NO</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Rfp_Pricing__c</fullName>
        <description>Created as part of Req 2461</description>
        <label>Pricing</label>
        <picklist>
            <picklistValues>
                <fullName>Lump Sum</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Itemised</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Rfp_Requirements__c</fullName>
        <description>R5 - Master detail relationship to RFP</description>
        <label>RFQ</label>
        <referenceTo>RFP__c</referenceTo>
        <relationshipLabel>Requirements</relationshipLabel>
        <relationshipName>Requirements</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Rfp_Scope_Description__c</fullName>
        <description>Scope Description - Created as part of  R5 Req 2461</description>
        <label>Scope Description</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Rfp_Sell_Price_Basis__c</fullName>
        <description>Sell Price Basis - Created as part of R5 Req 2461</description>
        <label>Sell Price Basis</label>
        <picklist>
            <picklistValues>
                <fullName>List Price</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Discount from List</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Specified GM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Specified NM</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Rfp_Who_signs_cover_letter__c</fullName>
        <description>R5 - Created as part of  req 2461</description>
        <label>Who signs cover letter ?</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <label>Requirements</label>
    <nameField>
        <displayFormat>REQ-{YY}-{0000}</displayFormat>
        <label>Requirement Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Requirements</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>